--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
       <a href="index.html">Home</a> | 
       <a href="resume.html">Resume</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
@@ -61,3 +62,4 @@
   </footer>
 </body>
 </html>
+
