--- a/resume.html
+++ b/resume.html
@@ -12,6 +12,7 @@
     <nav>
       <a href="index.html">Home</a> | 
       <a href="resume.html">Resume</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
@@ -63,3 +64,4 @@
   </footer>
 </body>
 </html>
+
