--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Computer Science and Engineering Student</p>
     <nav>
       <a href="index.html">Home</a> | 
-      <a href="resume.html">Resume</a>
+      <a href="resume.html">Resume</a> |
       <a href="contact.html">Contact</a>
     </nav>
   </header>
@@ -62,4 +62,5 @@
   </footer>
 </body>
 </html>
+
 
