--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
     <h1>Resume</h1>
     <nav>
       <a href="index.html">Home</a> | 
-      <a href="resume.html">Resume</a>
+      <a href="resume.html">Resume</a> |
       <a href="contact.html">Contact</a>
     </nav>
   </header>
@@ -64,4 +64,5 @@
   </footer>
 </body>
 </html>
+
 
