--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Jeevan MT - Contact</title>
+    <title>Jeevan MT - Resume</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,27 +26,20 @@
         </div>
     </header>
 
-    <section id="contact">
+    <section id="resume">
         <div class="container">
-            <h2 class="section-title">Contact Me</h2>
-            <div class="contact-content">
-                <div class="contact-form-container">
-                    <form class="contact-form">
-                        <input type="text" placeholder="Name" required>
-                        <input type="email" placeholder="Email" required>
-                        <input type="tel" placeholder="Mobile">
-                        <textarea placeholder="Message" rows="6"></textarea>
-                        <button type="submit">Submit</button>
-                    </form>
-                </div>
-                <div class="contact-info">
-                    <p>Or connect with me directly:</p>
-                    <div class="social-links">
-                        <a href="mailto:jeevanthandey@gmail.com" title="Email" class="email-icon"><i class="fas fa-envelope"></i></a>
-                        <a href="https://www.linkedin.com/in/jeevan-m-t-276697290" target="_blank" title="LinkedIn" class="linkedin-icon"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://github.com/JeevanMT" target="_blank" title="GitHub" class="github-icon"><i class="fab fa-github"></i></a>
-                    </div>
-                </div>
+            <h2 class="section-title">My Resume</h2>
+            <p style="text-align: center; font-size: 1.1rem; margin-bottom: 20px;">
+                You can view or download my complete resume below.
+            </p>
+            <div style="text-align: center;">
+                <a href="path/to/your-resume.pdf" target="_blank" class="cta-button">Download Resume (PDF)</a>
+            </div>
+            
+            <br>
+
+            <div style="text-align: center;">
+                <img src="path/to/your-resume-image.jpg" alt="A visual representation of Jeevan's resume." style="max-width: 100%; height: auto; border: 1px solid #ddd; border-radius: 8px;">
             </div>
         </div>
     </section>
