--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jeevan MT - Bio</title>
+    <title>Jeevan MT - Portfolio</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,11 +22,13 @@
 <body>
     <header class="header">
         <div class="container header-content">
-            <a href="index.html" class="logo">Jeevan MT</a>
+            <a href="#home" class="logo">Jeevan MT</a>
             <nav>
-                <a href="index.html" class="nav-link">Bio</a>
-                <a href="resume.html" class="nav-link">Resume</a>
-                <a href="contact.html" class="nav-link">Contact</a>
+                <a href="#about" class="nav-link">About</a>
+                <a href="#skills" class="nav-link">Skills</a>
+                <a href="#projects" class="nav-link">Projects</a>
+                <a href="#contact" class="nav-link">Contact</a>
+                <a href="jeevan-resume.pdf" class="nav-link" target="_blank">Resume</a>
             </nav>
         </div>
     </header>
@@ -36,16 +38,16 @@
             <div class="container hero-content">
                 <div class="hero-text">
                     <h1>Hello, I'm Jeevan</h1>
-                    <p>CSE Student | Developer | Tech Enthusiast</p>
+                    <p>Computer Science and Engineering Student</p>
                     <a href="#projects" class="btn">View My Work</a>
                 </div>
-                <div class="hero-image">
+                <div class="hero-image-container">
                     <img src="my-photo.jpeg" alt="A professional photo of Jeevan MT" class="my-photo" />
                 </div>
             </div>
         </section>
 
-        <section id="about">
+        <section id="about" class="animate-on-scroll">
             <div class="container">
                 <h2 class="section-title">About Me</h2>
                 <p class="section-paragraph">
@@ -54,7 +56,7 @@
             </div>
         </section>
 
-        <section id="skills">
+        <section id="skills" class="animate-on-scroll">
             <div class="container">
                 <h2 class="section-title">Skills</h2>
                 <div class="grid-layout">
@@ -77,7 +79,7 @@
             </div>
         </section>
 
-        <section id="projects">
+        <section id="projects" class="animate-on-scroll">
             <div class="container">
                 <h2 class="section-title">Projects</h2>
                 <div class="grid-layout">
@@ -92,6 +94,35 @@
                     <div class="card">
                         <h3>To-Do List Tracker</h3>
                         <p>A responsive task management web application that allows users to add, remove, and track tasks efficiently.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="animate-on-scroll">
+            <div class="container">
+                <h2 class="section-title">Get In Touch</h2>
+                <div class="contact-content">
+                    <div class="contact-form-container">
+                        <form class="contact-form">
+                            <input type="text" class="input-field" placeholder="Your Name" required />
+                            <input type="email" class="input-field" placeholder="Your Email" required />
+                            <input type="tel" class="input-field" placeholder="Your Mobile" />
+                            <textarea
+                                class="textarea-field"
+                                placeholder="Your Message"
+                                rows="6"
+                            ></textarea>
+                            <button type="submit" class="btn">Send Message</button>
+                        </form>
+                    </div>
+                    <div class="contact-info">
+                        <p>Or connect with me directly:</p>
+                        <div class="social-links">
+                            <a href="https://www.linkedin.com/in/jeevan-m-t-276697290" target="_blank" class="social-link" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://github.com/JeevanMT" target="_blank" class="social-link" title="GitHub"><i class="fab fa-github"></i></a>
+                            <a href="mailto:jeevanthandey@gmail.com" class="social-link" title="Email"><i class="fas fa-envelope"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
