--- a/resume.html
+++ b/resume.html
@@ -26,21 +26,20 @@
             <nav>
                 <a href="index.html" class="nav-link">Bio</a>
                 <a href="resume.html" class="nav-link">Resume</a>
-                <a href="photo.html" class="nav-link">Photo</a>
                 <a href="contact.html" class="nav-link">Contact</a>
             </nav>
         </div>
     </header>
 
     <main>
-        <section id="resume-content" class="animate-on-scroll">
+        <section id="resume-content">
             <div class="container">
                 <h2 class="section-title">My Resume</h2>
                 <div class="resume-wrapper">
                     <p style="text-align: center; color: var(--text-muted); margin-bottom: 2rem;">
                         You can view or download my complete resume below.
                     </p>
-                    <a href="path/to/your-resume.pdf" download class="btn" style="display: block; width: fit-content; margin: 0 auto;">Download Resume (PDF)</a>
+                    <a href="jeevan-resume.pdf" download class="btn" style="display: block; width: fit-content; margin: 0 auto;">Download Resume (PDF)</a>
                 </div>
             </div>
         </section>
@@ -53,7 +52,5 @@
             </p>
         </div>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
