--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jeevan MT - Portfolio</title>
+    <title>Jeevan MT - Bio</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,12 +22,12 @@
 <body>
     <header class="header">
         <div class="container header-content">
-            <a href="#home" class="logo">Jeevan MT</a>
+            <a href="index.html" class="logo">Jeevan MT</a>
             <nav>
-                <a href="#about" class="nav-link">About</a>
-                <a href="#skills" class="nav-link">Skills</a>
-                <a href="#projects" class="nav-link">Projects</a>
-                <a href="#contact" class="nav-link">Contact</a>
+                <a href="index.html" class="nav-link">Bio</a>
+                <a href="skills.html" class="nav-link">Skills</a>
+                <a href="projects.html" class="nav-link">Projects</a>
+                <a href="contact.html" class="nav-link">Contact</a>
                 <a href="jeevan-resume.pdf" class="nav-link" target="_blank">Resume</a>
             </nav>
         </div>
@@ -39,7 +39,7 @@
                 <div class="hero-text">
                     <h1>Hello, I'm Jeevan</h1>
                     <p>Computer Science and Engineering Student</p>
-                    <a href="#projects" class="btn">View My Work</a>
+                    <a href="projects.html" class="btn">View My Work</a>
                 </div>
                 <div class="hero-image-container">
                     <img src="my-photo.jpeg" alt="A professional photo of Jeevan MT" class="my-photo" />
@@ -53,78 +53,6 @@
                 <p class="section-paragraph">
                     I'm a Computer Science and Engineering student with a strong passion for programming and creating impactful, real-world projects. I'm constantly focused on honing my problem-solving skills and staying up-to-date with modern technologies. I love building things that make a difference, whether it's a simple tool or a complex application.
                 </p>
-            </div>
-        </section>
-
-        <section id="skills" class="animate-on-scroll">
-            <div class="container">
-                <h2 class="section-title">Skills</h2>
-                <div class="grid-layout">
-                    <div class="card">
-                        <i class="fas fa-code card-icon"></i>
-                        <h3>C++ / Java</h3>
-                        <p>Object-oriented programming and data structures.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-laptop-code card-icon"></i>
-                        <h3>Web Development</h3>
-                        <p>Frontend technologies like HTML, CSS, and JavaScript.</p>
-                    </div>
-                    <div class="card">
-                        <i class="fab fa-python card-icon"></i>
-                        <h3>Python</h3>
-                        <p>Scripting, automation, and data manipulation.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="projects" class="animate-on-scroll">
-            <div class="container">
-                <h2 class="section-title">Projects</h2>
-                <div class="grid-layout">
-                    <div class="card">
-                        <h3>Text-Based Adventure Game</h3>
-                        <p>A console-based interactive game where users navigate a story by making choices, built to strengthen fundamental programming logic.</p>
-                    </div>
-                    <div class="card">
-                        <h3>Virtual Garden Planner</h3>
-                        <p>A simple web-based tool for users to visualize and organize a virtual garden layout digitally, showcasing front-end development skills.</p>
-                    </div>
-                    <div class="card">
-                        <h3>To-Do List Tracker</h3>
-                        <p>A responsive task management web application that allows users to add, remove, and track tasks efficiently.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="contact" class="animate-on-scroll">
-            <div class="container">
-                <h2 class="section-title">Get In Touch</h2>
-                <div class="contact-content">
-                    <div class="contact-form-container">
-                        <form class="contact-form">
-                            <input type="text" class="input-field" placeholder="Your Name" required />
-                            <input type="email" class="input-field" placeholder="Your Email" required />
-                            <input type="tel" class="input-field" placeholder="Your Mobile" />
-                            <textarea
-                                class="textarea-field"
-                                placeholder="Your Message"
-                                rows="6"
-                            ></textarea>
-                            <button type="submit" class="btn">Send Message</button>
-                        </form>
-                    </div>
-                    <div class="contact-info">
-                        <p>Or connect with me directly:</p>
-                        <div class="social-links">
-                            <a href="https://www.linkedin.com/in/jeevan-m-t-276697290" target="_blank" class="social-link" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                            <a href="https://github.com/JeevanMT" target="_blank" class="social-link" title="GitHub"><i class="fab fa-github"></i></a>
-                            <a href="mailto:jeevanthandey@gmail.com" class="social-link" title="Email"><i class="fas fa-envelope"></i></a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
     </main>
