--- a/contact.html
+++ b/contact.html
@@ -25,32 +25,40 @@
             <a href="index.html" class="logo">Jeevan MT</a>
             <nav>
                 <a href="index.html" class="nav-link">Bio</a>
-                <a href="resume.html" class="nav-link">Resume</a>
-                <a href="photo.html" class="nav-link">Photo</a>
+                <a href="skills.html" class="nav-link">Skills</a>
+                <a href="projects.html" class="nav-link">Projects</a>
                 <a href="contact.html" class="nav-link">Contact</a>
+                <a href="jeevan-resume.pdf" class="nav-link" target="_blank">Resume</a>
             </nav>
         </div>
     </header>
 
     <main>
-        <section id="contact" class="animate-on-scroll">
+        <section id="contact">
             <div class="container">
                 <h2 class="section-title">Get In Touch</h2>
-                <form class="contact-form">
-                    <input type="text" class="input-field" placeholder="Your Name" required />
-                    <input type="email" class="input-field" placeholder="Your Email" required />
-                    <input type="tel" class="input-field" placeholder="Your Mobile" />
-                    <textarea
-                        class="textarea-field"
-                        placeholder="Your Message"
-                        rows="6"
-                    ></textarea>
-                    <button type="submit" class="btn">Send Message</button>
-                </form>
-                <div class="social-links">
-                    <a href="https://www.linkedin.com/in/jeevan-m-t-276697290" target="_blank" class="social-link" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/JeevanMT" target="_blank" class="social-link" title="GitHub"><i class="fab fa-github"></i></a>
-                    <a href="mailto:jeevanthandey@gmail.com" class="social-link" title="Email"><i class="fas fa-envelope"></i></a>
+                <div class="contact-content">
+                    <div class="contact-form-container">
+                        <form class="contact-form">
+                            <input type="text" class="input-field" placeholder="Your Name" required />
+                            <input type="email" class="input-field" placeholder="Your Email" required />
+                            <input type="tel" class="input-field" placeholder="Your Mobile" />
+                            <textarea
+                                class="textarea-field"
+                                placeholder="Your Message"
+                                rows="6"
+                            ></textarea>
+                            <button type="submit" class="btn">Send Message</button>
+                        </form>
+                    </div>
+                    <div class="contact-info">
+                        <p>Or connect with me directly:</p>
+                        <div class="social-links">
+                            <a href="https://www.linkedin.com/in/jeevan-m-t-276697290" target="_blank" class="social-link" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://github.com/JeevanMT" target="_blank" class="social-link" title="GitHub"><i class="fab fa-github"></i></a>
+                            <a href="mailto:jeevanthandey@gmail.com" class="social-link" title="Email"><i class="fas fa-envelope"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -63,7 +71,5 @@
             </p>
         </div>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
